# blog-app

./: Dockerfile  Dockerfile.cloud  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 4aeff916b621_disabled_the_slug_field_in_the_blog_.py  b3fc54408e20_create_user_and_blog_tables.py
apis/: main.py
apis/core/: config.py
apis/db/: base.py  session.py
apis/db/models/: blog.py  user.py
backend/: main.py
backend/apis/: base.py
backend/apis/v1/: route_blog.py  route_login.py  route_user.py
backend/apps/: base.py
backend/apps/v1/: route_blog.py  route_login.py
backend/core/: config.py  security.py
backend/db/: base.py  base_class.py  session.py
backend/db/models/: blog.py  user.py
backend/db/repository/: blog.py  user.py
backend/schemas/: blog.py
backend/templates/: base.html
backend/templates/auth/: login.html  register.html
backend/templates/blog/: create_blog.html  detail.html  home.html
backend/templates/components/: navbar.html
